Fixing scrolling bug on iOS devices

--- a/app/assets/stylesheets/avalon.css.scss
+++ b/app/assets/stylesheets/avalon.css.scss
@@ -581,3 +581,18 @@ button.close {
     height: auto;
   }
 }
+
+// For mobile devices and smaller viewports disable the transform because it
+// does not render correctly. Overriding the override may not be the best idea
+// but should be a quick route to a functioning solution 
+@media (max-width: $navbarCollapseWidth) {
+  .modal.fade.in {
+    @include translate(0, 0);
+    max-height: 93%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    .modal-body {
+      overflow-y: none;
+    }
+  }
+}
